--- a/prj3/AndroidStudioProject/HarryPotterSpells/app/src/main/res/values/colors.xml
+++ b/prj3/AndroidStudioProject/HarryPotterSpells/app/src/main/res/values/colors.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#6200EE</color>
-    <color name="colorPrimaryDark">#3700B3</color>
-    <color name="colorAccent">#03DAC5</color>
+    <color name="colorPrimary">@color/black</color>
+    <color name="colorPrimaryDark">@color/black</color>
+    <color name="colorAccent">@color/black</color>
 
     <color name="black">#000000</color>
     <color name="white">#FFFFFF</color>
+    <color name="dark_blue">#1b262c</color>
 </resources>
