--- a/prj3/AndroidStudioProject/HarryPotterSpells/app/src/main/res/layout/activity_setup.xml
+++ b/prj3/AndroidStudioProject/HarryPotterSpells/app/src/main/res/layout/activity_setup.xml
@@ -12,36 +12,18 @@
         android:id="@+id/ipAddressInputLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp"
-        app:layout_constraintBottom_toTopOf="@+id/portInputLayout"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_chainStyle="packed"
-        android:hint="IP Address">
-
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/ipAddressInputText"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
-
-    </com.google.android.material.textfield.TextInputLayout>
-
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/portInputLayout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp"
+        android:layout_marginBottom="8dp"
+        android:hint="IP Address"
         app:layout_constraintBottom_toTopOf="@+id/nextButton"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/ipAddressInputLayout"
-        android:hint="Port">
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_chainStyle="packed">
 
         <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/portInputText"
+            android:id="@+id/serverAddressInputText"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content" />
 
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -49,9 +31,10 @@
         android:id="@+id/nextButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@+id/portInputLayout"
+        android:text="Next >"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        android:text="Next >"/>
+        app:layout_constraintTop_toBottomOf="@+id/ipAddressInputLayout" />
 </androidx.constraintlayout.widget.ConstraintLayout>
