--- a/prj3/AndroidStudioProject/HarryPotterSpells/app/src/main/res/layout/activity_setup.xml
+++ b/prj3/AndroidStudioProject/HarryPotterSpells/app/src/main/res/layout/activity_setup.xml
@@ -13,7 +13,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
-        android:hint="IP Address"
+        android:hint="Server Address"
         app:layout_constraintBottom_toTopOf="@+id/nextButton"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
